syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.congthanh.project.grpc";

service SubcategoryService {
  rpc getSubcategoryById (SubcategoryRequest) returns (SubcategoryResponse) {}
}

message SubcategoryRequest {
  int32 subcategoryId = 1;
}

message SubcategoryResponse {
  int32 id = 1;
  string name = 2;
  string slug = 3;
  string image = 4;
  string status = 5;
  int32 categoryId = 6;
}
