syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.congthanh.productservice.grpc";

package productservice;

service ProductService {
  rpc GetProductById (ProductRequest) returns (ProductResponse) {}
}

message ProductRequest {
  string productId = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  string category = 3;
  string subcategory = 4;
  string sku = 5;
  string slug = 6;
  double price = 7;
}